k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youbike-helper-backend-deployment
spec:
  selector:
    matchLabels:
      app: youbike-helper
      tier: backend
  replicas: 3
  # refers to the pod
  template:
    metadata:
      labels:
        app: youbike-helper
        tier: backend
    spec:
      containers:
        - name: youbike-helper-backend
          # image: <your_docker_hub_username>/youbike-helper-backend:latest
          image: kanido386/youbike-helper-backend:latest
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          ports:
            - containerPort: 3000
