k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youbike-helper-backend-service
spec:
  selector:
    app: youbike-helper
    tier: backend
  type: NodePort
  ports:
    - name: youbike-helper-backend
      port: 3000
      targetPort: 3000
      nodePort: 30000
