k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youbike-helper-db-service
spec:
  selector:
    app: youbike-helper
    tier: db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
